Controller angepasst